# Dexterous-Hand-IoT

./: .gitignore  README.md  algorithm_demo.py  hardware_demo.py
demos/: README.md
docs/: CONFIG_YAML说明书.md  ORCA_CORE项目说明书.md  README.md  fingers.md  hand_motor.md  learning_path_team_roles_first_two_weeks.md  orca_core_project_overview.md  team_roles_week1_and_interface_contract.md  三人分层分工表_本周任务_接口约定.md  学习顺序图_三人分工_前两周计划.md
flexible_hand/: __init__.py  fixed_gesture_demo.py  fixed_gestures.py  gesture_api.py  hand_interface.py  motor_control.guide.md  motor_control.py  multi_motor_control.py  runtime_config.py  scan_motors.py
flexible_hand/flexible_hand_realtime_package/: MOTOR_JOINT_MAPPING.md  README.md  hand_interface.md  hand_interface.py  interface_contract_test.py  motor_control.py  multi_motor_control.py  realtime_calibration.yaml  realtime_hand_config.py  vision_demo.py
flexible_hand/hardware/: calibration.yaml  feetech_client.py  find_limits.py  step_motor.py
flexible_hand/old/: scan_motors_old.py
gesture_recognition/: README.md
interfaces/: README.md  interface_spec.md
ros2_ws/: README.md
ros2_ws/src/hand_middle/: HAND_MIDDLE_开发手册.md  package.xml  setup.cfg  setup.py
ros2_ws/src/hand_middle_interfaces/: CMakeLists.txt  package.xml
ros2_ws/src/hand_middle_interfaces/msg/: HandStatus.msg
ros2_ws/src/hand_middle_interfaces/srv/: HandCommand.srv
scripts/: README.md  hand_interface.md  hand_interface.py  quick_calibrate.py
stimulated_hand/: AUDIT.md  README.md  __init__.py  hand_tracker.py  joint_mapper.py  main.py
(+8 files in other folders)
